--- a/app/src/main/res/layout/dialog_picker_topic.xml
+++ b/app/src/main/res/layout/dialog_picker_topic.xml
@@ -20,6 +20,21 @@
             android:layout_marginTop="@dimen/dimen_24"
             android:text="@string/dialog_topic_picker_title" />
 
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/question_level"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layoutAnimation="@anim/layout_animation_fall_down"
+                app:chipSpacingHorizontal="@dimen/dimen_4"
+                app:singleLine="true"
+                app:singleSelection="true"
+                app:selectionRequired="true"/>
+        </HorizontalScrollView>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
