--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -14,62 +14,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/timeLabel"
-            style="@style/gameBodyStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dimen_3"
-            android:text="@string/time"
-            android:textSize="@dimen/text_16"
-            app:layout_constraintTop_toTopOf="@id/cardView"
-            app:layout_constraintEnd_toEndOf="@id/progress"
-            app:layout_constraintStart_toStartOf="@id/progress" />
-
-        <ProgressBar
-            android:id="@+id/progress"
-            style="@style/CircularDeterminateProgressBar"
-            android:layout_width="@dimen/dimen_50"
-            android:layout_height="@dimen/dimen_50"
-            android:layout_marginEnd="@dimen/dimen_3"
-            android:max="10"
-            android:progress="10"
-            app:layout_constraintTop_toBottomOf="@+id/timeLabel"
-            app:layout_constraintEnd_toEndOf="@id/cardView" />
-
-        <TextView
-            android:id="@+id/progress_text"
-            style="@style/gameBodyStyle"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:paddingHorizontal="@dimen/dimen_3"
-            android:textSize="@dimen/text_16"
-            app:layout_constraintBottom_toBottomOf="@id/progress"
-            app:layout_constraintEnd_toEndOf="@id/progress"
-            app:layout_constraintStart_toStartOf="@id/progress"
-            app:layout_constraintTop_toTopOf="@id/progress"
-            tools:text="21" />
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            app:cardBackgroundColor="@android:color/transparent"
             android:layout_marginTop="@dimen/dimen_10"
+            app:cardBackgroundColor="@android:color/transparent"
             app:cardCornerRadius="@dimen/dimen_2"
             app:layout_constraintDimensionRatio="W, 16:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/imageQuestion"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/dimen_8"
-                android:scaleType="fitCenter" />
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageQuestion"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/dimen_8"
+                    android:scaleType="fitCenter" />
+
+                <include
+                    android:id="@+id/counterLayout"
+                    layout="@layout/counter"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
         <TextView
