--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -16,16 +16,15 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/picture"
-            android:layout_width="@dimen/dimen_100"
+            android:layout_width="@dimen/dimen_50"
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/dimen_6"
-            android:src="@drawable/ic_profile"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="H, 1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-            app:strokeColor="@color/white"
+            app:strokeColor="@color/black"
             app:strokeWidth="1dp" />
 
         <TextView
@@ -33,9 +32,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/black"
+            style="@style/gameBodyStyle"
+            android:text="@{Integer.toString(itemRanking.position)}"
             app:layout_constraintEnd_toEndOf="@id/picture"
             app:layout_constraintStart_toStartOf="@+id/picture"
-            app:layout_constraintTop_toBottomOf="@+id/picture" />
+            app:layout_constraintBottom_toBottomOf="@id/picture"
+            app:layout_constraintTop_toTopOf="@id/picture" />
 
 
         <TextView
