--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -42,6 +42,8 @@
         <TextView
             android:id="@+id/txtProfileName"
             style="@style/itemTextStyle"
+            android:textStyle="bold"
+            android:textColor="@color/white"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_4"
