--- a/app/src/main/res/layout/fragment_container_ranking.xml
+++ b/app/src/main/res/layout/fragment_container_ranking.xml
@@ -21,6 +21,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0"
+            android:layout_marginTop="@dimen/dimen_5"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title">
@@ -28,7 +29,8 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                app:tabIndicatorColor="@color/primary_blue" />
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/pager"
