--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/carga_1">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/background_pager"
@@ -23,6 +24,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="@dimen/dimen_0"
+            android:layout_height="@dimen/dimen_259"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_foreground"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_info" />
+
+        <TextView
+            style="@style/gameTitleStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_0"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
+
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_info"
             android:layout_width="wrap_content"
@@ -30,7 +53,7 @@
             android:layout_margin="@dimen/dimen_5"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_about"
-            android:tint="@color/black"
+            android:tint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,10 +66,10 @@
             android:clipChildren="false"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:layout_constraintTop_toTopOf="@id/guideline"
             app:layout_constraintBottom_toBottomOf="@id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline"
             app:spanCount="3"
             tools:itemCount="6"
             tools:listitem="@layout/item_home" />
