--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -41,6 +41,7 @@
             android:layout_marginStart="@dimen/dimen_16"
             android:text="@{answerBO.title}"
             style="@style/gameBodyStyle"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
