--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -24,15 +24,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-            app:strokeColor="@color/black"
-            app:strokeWidth="1dp" />
+            app:strokeColor="@color/white"
+            app:strokeWidth="@dimen/dimen_2" />
 
         <TextView
             android:id="@+id/position"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@color/black"
             style="@style/gameBodyStyle"
             android:text="@{Integer.toString(itemRanking.position)}"
             app:layout_constraintEnd_toEndOf="@id/picture"
@@ -42,11 +41,11 @@
 
 
         <TextView
-            style="@style/gameBodyStyle"
+            style="@style/gameTitleStyle"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/dimen_6"
-            android:gravity="center"
+            android:layout_marginTop="@dimen/dimen_0"
             android:text="@{itemRanking.name}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/rankingPoints"
