--- a/app/src/main/res/layout/item_ranking_header.xml
+++ b/app/src/main/res/layout/item_ranking_header.xml
@@ -16,8 +16,8 @@
         android:orientation="horizontal">
 
         <TextView
-            style="@style/dialog_title"
-            android:layout_width="wrap_content"
+            style="@style/gameTitleStyle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_0"
             android:gravity="center"
