--- a/app/src/main/res/layout/item_tab_header.xml
+++ b/app/src/main/res/layout/item_tab_header.xml
@@ -34,8 +34,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            style="@style/gameTitleStyle"
+            android:layout_marginTop="@dimen/dimen_0"
             android:maxLines="1"
-            android:textColor="@color/black"
             android:textSize="@dimen/text_20"
             android:textStyle="bold"
             android:text="@{Integer.toString(questionIndex)}"
